[package]
name = "dnp3_master_io_v3"
version = "0.3.0"
edition = "2021"

[dependencies]
# --- async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"

# --- DNP3 ---
dnp3 = "1.6.0"

# --- web / REST / UI ---
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- concurrency ---
parking_lot = "0.12"

# --- logging & errors ---
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# --- optional (safe to keep if used elsewhere) ---
dotenvy = "0.15"
once_cell = "1.19"

toml = "0.8"
